# AegisCore

./: .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/admin-demo/: Dockerfile  index.html  package.json  tsconfig.json
apps/admin-demo/src/: App.tsx  styles.css
apps/admin-demo/src/components/: LoginForm.tsx  (+1 more)
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: fastify.d.ts  index.ts  server.ts
docs/: api-error-contract.md  architecture.md  configuration.md  faq.md  hardening-checklist.md  incident-response.md  integration.md  operation.md  study-guide.md  threat-model.md  validation-fixtures.md
examples/: demo-requests.http
native/: Cargo.toml
native/aegis-native/: Cargo.toml  binding.js  package.json  tsconfig.json  types.d.ts
native/aegis-native/src/: lib.rs
native/crates/payload_normalizer/: Cargo.toml
native/crates/payload_normalizer/src/: lib.rs
native/crates/request_inspector/: Cargo.toml
native/crates/request_inspector/src/: lib.rs
native/crates/risk_scoring_core/: Cargo.toml
native/crates/risk_scoring_core/src/: lib.rs
native/crates/security_parser/: Cargo.toml
native/crates/security_parser/src/: lib.rs
scripts/: native-build-optional.mjs  native-test-optional.mjs
tests/integration/: api-auth-flow.test.ts  api-defensive-controls.test.ts
tests/unit/: auth.test.ts  security-controls.test.ts  security-core.test.ts
(+9 files in other folders)
