[workspace]
members = [
  "aegis-native",
  "crates/payload_normalizer",
  "crates/security_parser",
  "crates/request_inspector",
  "crates/risk_scoring_core"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["AegisCore"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
regex = "1.11"
percent-encoding = "2.3"
url = "2.5"
napi = { version = "2.16", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.16"

